app/assets/stylesheets/partials/base/_tables.scss
/* ======================================================================================
   @BASE -> TABLES
   ====================================================================================== */

/*
  Table element

  .table-striped        - Stripey table
  .table-bordered       - Bordered table

  Styleguide Tables
*/

/*
	Note: these are very basic styles hence them being in 'base', if you're needing something more styled then your table should become a 'module' inheriting from here.
*/

/* Base */
table {
	width: 100%;
	@extend %mrg-base;
}

	/* Cell padding */
	th,
	td {
		padding: to-em($spacing-quarter);

		/* Increase at this breakpoint */
		@include respond-min($non-palm) {
			padding: to-em($spacing-half);
		}
	}

	/* Caption */
	caption {
    font-weight: bold;
    @extend %mrg-base;
  }

	/* Cell header */
	th {font-weight: bold;}

	/* Alignments */
	caption,
	th {text-align: left;}

	[colspan] {text-align: center;}

	[colspan="1"] {text-align: left;}

	[rowspan] {vertical-align: middle;}

	[rowspan="1"] {vertical-align: top;}

	/* Print */
	@media print {
		thead {display: table-header-group;}
	}

/* Striped */
.table-striped tbody tr:nth-of-type(odd) {background-color: $color-grey-3;}

/* Enable horizontal scroll bar, works with the JS `tableHorizontalScroll()` function */
.table-horiz-scroll {
  overflow-x: auto;
  @extend %mrg-base;

  /* iOS/Android */
  .ios &,
  .android & {
    overflow-x: scroll;
    -webkit-overflow-scrolling: touch;
  }
}

/* Bordered */
.table-bordered,
.txt-formatted--user-generated table {

  /* Cells */
  th,
  td {
    border: 1px solid $color-grey-2;

    /* No borders for empty cells */
    &:empty {border: 0;}
  }

	/* Thicker border for the last row in the `thead` */
  thead tr:last-child th {border-bottom-width: 2px;}
}

/* Add `table-layout: fixed` */
.table-fixed {table-layout: fixed;}

